--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="navbar bg-base-100 shadow-lg rounded-lg sticky top-0 max-w-[1200px] mx-auto z-50 mt-8">
   <!-- Left: Logo -->
   <div class="flex-1">
-    <a class="btn btn-ghost text-4xl normal-case">J</a>
+    <a routerLink="/home" class="btn btn-ghost text-4xl normal-case">J</a>
   </div>
 
   <!-- Right: Links -->
@@ -65,8 +65,8 @@
     </div>
   </div>
 
-  <div class="hero-content bg-base-100 flex flex-col justify-center items-start px-4 sm:px-6 md:px-10 py-20 max-w-4xl w-full mx-auto shadow-lg">
 
+  <div class="hero-content bg-base-100 flex flex-col justify-center items-start px-4 sm:px-6 md:px-10 py-20 max-w-4xl w-full mx-auto shadow-lg">
     <section id="about">
       <!-- About me -->
       <div class="mb-10">
@@ -108,7 +108,7 @@
                 Junior Web Developer · Kumosoft - Itech-Rar Solutions Inc
               </h3>
               <p class="text-gray-300 mt-2">
-                Designed, developed, and optimized critical components for Kumosoft - Itech-Rar Solutions Inc’s frontend, ensuring seamless user experiences and maintaining high performance standards.
+                As a Junior Web Developer at Kumosoft - Itech-Rar Solutions Inc, I am responsible for maintaining and updating various school systems, including Learning Management Systems (LMS) and enrollment platforms. My tasks include developing and designing user-friendly interfaces, ensuring smooth functionality across the systems, and performing regular data entry and updates. I work closely with the team to streamline processes and enhance the user experience for both administrators and students.
               </p>
 
               <!-- Tech Badges -->
@@ -124,7 +124,7 @@
           </div>
         </a>
 
-        <div class="job-card ">
+        <!-- <div class="job-card ">
             <p class="text-sm text-gray-400">2024 — 2025</p>
             <h3 class="text-xl font-bold">Full-stack · JuanBayan (Capstone Project)</h3>
             <p class="text-gray-300 mt-2">
@@ -136,20 +136,7 @@
               <span class="badge badge-success">React</span>
               <span class="badge badge-success">Storybook</span>
             </div>
-          </div>
-        <div class="job-card ">
-            <p class="text-sm text-gray-400">2024 — PRESENT</p>
-            <h3 class="text-xl font-bold">Senior Frontend Engineer · Klaviyo</h3>
-            <p class="text-gray-300 mt-2">
-              Build and maintain critical components used to construct Klaviyo’s frontend.
-            </p>
-            <div class="mt-3 space-x-2">
-              <span class="badge badge-success">JavaScript</span>
-              <span class="badge badge-success">TypeScript</span>
-              <span class="badge badge-success">React</span>
-              <span class="badge badge-success">Storybook</span>
-            </div>
-          </div>
+        </div> -->
       </div>
     </div>
 
@@ -158,17 +145,101 @@
     <!-- Experience Section -->
     <div id="projects">
       <h2 class="text-3xl font-semibold mb-4">Projects</h2>
+      <div class="flex flex-col gap-6 ">
 
+        <a href="" >
+          <div class="flex flex-col sm:flex-row gap-4 p-6 rounded-xl job-card">
+            <div class="sm:w-1/4 text-sm text-gray-400">
+              <img src="assets/images/JUANBAYAN.png" alt="About me image" class="rounded-md shadow-lg w-full object-cover" style=" height: 100px; margin-top: 10px;"/>
+            </div>
+
+
+            <!-- Content -->
+            <div class="sm:w-3/4">
+              <h3 class="text-xl font-bold">
+                JUANBAYAN · Capstone Project
+              </h3>
+              <p class="text-gray-300 mt-2" align="justify">
+                JuanBayan is an online crowdfunding platform that empowers users to create and manage their own fundraising campaigns. Whether it's for personal needs, medical emergencies, community projects, or charitable causes, JuanBayan provides an accessible way for individuals to set funding goals, share compelling stories, and reach potential supporters. This platform is built especially to support underprivileged individuals and communities, offering them a chance to receive help in times of need through the generosity of others.
+                <br /><br />
+              </p>
+
+              <!-- Tech Badges -->
+              <div class="mt-4 flex flex-wrap gap-2">
+                <span class="badge badge-error">Angular</span>
+                <span class="badge badge-warning">HTML & CSS</span>
+                <span class="badge badge-info">TypeScript</span>
+                <span class="badge badge-success">Nodejs</span>
+                <span class="badge badge-success">MySQL</span>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="" >
+          <div class="flex flex-col sm:flex-row gap-4 p-6 rounded-xl job-card">
+            <div class="sm:w-1/4 text-sm text-gray-400">
+              <img src="assets/images/renthings.jpg" alt="About me image" class="rounded-md shadow-lg w-full object-cover" style=" height: 100px; margin-top: 10px;"/>
+            </div>
+
+
+            <!-- Content -->
+            <div class="sm:w-3/4">
+              <h3 class="text-xl font-bold">
+                Renthings
+              </h3>
+              <p class="text-gray-300 mt-2" align="justify">
+                Renthings is an online rental platform that allows users to conveniently rent a variety of items including vehicles, equipment, and more through a secure and user-friendly website. Whether you need something for a short-term project, travel, or personal use, Renthings makes it easy to browse, book, and manage rentals all in one place.
+              </p>
+
+              <!-- Tech Badges -->
+              <div class="mt-4 flex flex-wrap gap-2">
+                <span class="badge badge-secondary">Angular</span>
+                <span class="badge badge-warning">HTML & CSS</span>
+                <span class="badge badge-info">Tailwind</span>
+                <span class="badge badge-info">DaisyUI</span>
+                <span class="badge badge-info">TypeScript</span>
+                <span class="badge badge-success">Nodejs</span>
+                <span class="badge badge-success">MySQL</span>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <a href="" >
+          <div class="flex flex-col sm:flex-row gap-4 p-6 rounded-xl job-card">
+            <div class="sm:w-1/4 text-sm text-gray-400">
+              <img src="assets/images/crud.jpg" alt="About me image" class="rounded-md shadow-lg w-full object-cover" style=" height: 100px; margin-top: 10px;"/>
+            </div>
+
+
+            <!-- Content -->
+            <div class="sm:w-3/4">
+              <h3 class="text-xl font-bold">
+                My Cruddies - CRUD Operation
+              </h3>
+              <p class="text-gray-300 mt-2" align="justify">
+                My Cruddies is a lightweight CRUD app that uses Google Sheets as its database and Apps Script for the backend. It shows how to build a dynamic web app with real-time data storage without using static files or local storage.
+              </p>
+
+              <!-- Tech Badges -->
+              <div class="mt-4 flex flex-wrap gap-2">
+                <span class="badge badge-secondary">Angular</span>
+                <span class="badge badge-warning">HTML & CSS</span>
+                <span class="badge badge-info">Tailwind</span>
+                <span class="badge badge-info">DaisyUI</span>
+                <span class="badge badge-info">TypeScript</span>
+                <span class="badge badge-secondary">AppScript</span>
+                <span class="badge badge-success">Google Spreadsheets</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
 
     <div class="divider"></div>
 
-    <!-- Resume Section -->
-    <div>
-      <h2 class="text-3xl font-semibold mb-4">Resume</h2>
-      <a href="resume.pdf" class="btn btn-secondary">Download Resume</a>
-    </div>
-  </div>
 </div>
 
 <style>
@@ -180,7 +251,7 @@
   }
 
   .job-card:hover {
-    border-left: 10px solid #f19b2b;
+    border-left: 10px solid #f1bc2b;
     background: rgba(30, 35, 49, 0.918);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   }
